[gd_scene load_steps=34 format=4 uid="uid://dqssojwypbaus"]

[ext_resource type="Script" path="res://scripts/levels/volcano/volcano.gd" id="1_b2bfy"]
[ext_resource type="PackedScene" uid="uid://h2scas508wx8" path="res://scenes/player/player.tscn" id="2_e7sav"]
[ext_resource type="Texture2D" uid="uid://xg122dwerbr4" path="res://assets/terrain/background4.png" id="3_2d43g"]
[ext_resource type="Texture2D" uid="uid://dn2ondq3wa7gn" path="res://assets/terrain/background3.png" id="4_ja63r"]
[ext_resource type="Texture2D" uid="uid://c5tnobrot0j13" path="res://assets/terrain/background2.png" id="5_sv50i"]
[ext_resource type="Texture2D" uid="uid://difx68geykde5" path="res://assets/terrain/background1.png" id="6_2kqw2"]
[ext_resource type="Texture2D" uid="uid://la33p6fanmf5" path="res://assets/terrain/background_spike.png" id="7_gx1ty"]
[ext_resource type="Texture2D" uid="uid://cs00wd0bvv0gl" path="res://assets/terrain/background_lava.png" id="8_rf3bq"]
[ext_resource type="Texture2D" uid="uid://lt4fbvt6wwqc" path="res://assets/terrain/background_cavetop.png" id="9_r0cur"]
[ext_resource type="TileSet" uid="uid://bgats76tug61b" path="res://resources/terrains/cave.tres" id="10_qhmis"]
[ext_resource type="PackedScene" uid="uid://d1wdew64brdad" path="res://scenes/enemies/lightning_darkness.tscn" id="11_rblpi"]
[ext_resource type="PackedScene" uid="uid://ccxoeeah32ir0" path="res://scenes/enemies/mygg.tscn" id="12_fpxxd"]
[ext_resource type="PackedScene" uid="uid://bd1bbb3lnfs7i" path="res://scenes/items/coffee.tscn" id="12_mt5i8"]
[ext_resource type="PackedScene" uid="uid://f10j447ugoru" path="res://scenes/components/hit_box_component.tscn" id="14_ue5an"]
[ext_resource type="PackedScene" uid="uid://lvm10p4r2jd7" path="res://scenes/ui/coffee_bar.tscn" id="15_woxkw"]
[ext_resource type="Texture2D" uid="uid://cq0cqyn620idm" path="res://assets/terrain/lava_foreground.png" id="17_a2uw1"]
[ext_resource type="PackedScene" uid="uid://xwtbqrbdqu5q" path="res://scenes/enemies/vampire_bat.tscn" id="18_ekrsf"]
[ext_resource type="Texture2D" uid="uid://7afc266pmi5f" path="res://assets/terrain/lava_bubble.png" id="18_n4gy1"]

[sub_resource type="Curve2D" id="Curve2D_a2lnf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 46.9134, 64.4668, 0, 0, 0, 0, -35.0866, 83.4668, 0, 0, 0, 0, -81.0866, 64.4668, 0, 0, 0, 0, -129.087, 42.4668, 0, 0, 0, 0, -183.087, 67.4668, 0, 0, 0, 0, -220.087, 44.4668)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_uqq1c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1.84802, 0.544785, 0, 0, 0, 0, -28.848, -6.45522, 0, 0, 0, 0, -70.848, 35.5448, 0, 0, 0, 0, -109.848, 26.5448, 0, 0, 0, 0, -159.848, 32.5448, 0, 0, 0, 0, -213.848, 24.5448, 0, 0, 0, 0, -245.848, 32.5448)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_miurb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1.93195, 2.2804, 0, 0, 0, 0, 32.9319, 30.2804, 0, 0, 0, 0, 84.9319, 51.2804, 0, 0, 0, 0, 126.932, 11.2804, 0, 0, 0, 0, 182.932, 54.2804, 0, 0, 0, 0, 234.932, 52.2804)
}
point_count = 6

[sub_resource type="Gradient" id="Gradient_q5eab"]
offsets = PackedFloat32Array(0, 0.654804)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e3acf"]
gradient = SubResource("Gradient_q5eab")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8m4mn"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_36ewo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lsc0"]
size = Vector2(120, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw617"]
atlas = ExtResource("17_a2uw1")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5pi7"]
atlas = ExtResource("17_a2uw1")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ibsp"]
atlas = ExtResource("17_a2uw1")
region = Rect2(256, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pkq1b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw617")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5pi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ibsp")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vchwx"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kqdpn"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(48, 16, 1)
gravity = Vector3(0, 0, 0)
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxweb"]
size = Vector2(16, 48)

[node name="Volcano" type="Node2D"]
script = ExtResource("1_b2bfy")
player = ExtResource("2_e7sav")

[node name="Background" type="Node2D" parent="."]

[node name="Background4Parallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(360, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/Background4Parallax2D"]
texture = ExtResource("3_2d43g")
offset = Vector2(180, 180)

[node name="Background3Parallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.2, 1)
repeat_size = Vector2(360, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/Background3Parallax2D"]
texture = ExtResource("4_ja63r")
offset = Vector2(180, 180)

[node name="Background2Parallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.4, 1)
repeat_size = Vector2(360, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/Background2Parallax2D"]
texture = ExtResource("5_sv50i")
offset = Vector2(180, 180)

[node name="Background1Parallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.5, 1)
repeat_size = Vector2(360, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/Background1Parallax2D"]
texture = ExtResource("6_2kqw2")
offset = Vector2(180, 180)

[node name="BackgroundSpikeParallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.6, 1)
repeat_size = Vector2(360, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/BackgroundSpikeParallax2D"]
texture = ExtResource("7_gx1ty")
offset = Vector2(180, 180)

[node name="BackgroundLavaParallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.7, 1)
repeat_size = Vector2(360, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/BackgroundLavaParallax2D"]
texture = ExtResource("8_rf3bq")
offset = Vector2(180, 180)

[node name="BackgroundCaveParallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.7, 1)
repeat_size = Vector2(360, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/BackgroundCaveParallax2D"]
texture = ExtResource("9_r0cur")
offset = Vector2(180, 180)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAABAAAAABAAAAAAABABAAAAABAAAAAAATAA8AAAADAAAAAAAUABAAAAABAAAAAAATABAAAAAEAAIAAAAVABAAAAABAAAAAAAVABEAAAABAAEAAAAWABEAAAABAAEAAAAXABEAAAABAAEAAAAYABEAAAABAAEAAAAZABEAAAABAAEAAAAaABEAAAACAAEAAAAWABAAAAABAAAAAAAXABAAAAABAAAAAAAYABAAAAABAAAAAAAZABAAAAABAAAAAAAaABAAAAACAAAAAAAeABAAAAAAAAAAAAAfABAAAAABAAAAAAAgABAAAAABAAAAAAAhAA8AAAAAAAAAAAAiAA8AAAABAAAAAAAhABAAAAAGAAIAAAAjAA8AAAABAAAAAAAkABAAAAABAAEAAAAjABAAAAABAAEAAAAiABAAAAABAAEAAAAlABAAAAABAAEAAAAlAA8AAAABAAAAAAAmAA8AAAAJAAEAAAAmAA4AAAAAAAAAAAAnAA4AAAABAAAAAAAoAA4AAAACAAAAAAAoAA8AAAACAAIAAAAnAA8AAAABAAIAAAAmABAAAAACAAEAAAAmABEAAAACAAIAAAAlABEAAAAFAAEAAAAkABEAAAABAAEAAAAjABEAAAABAAEAAAAiABEAAAABAAEAAAAhABIAAAABAAEAAAAgABIAAAAGAAEAAAAfABIAAAABAAIAAAAeABEAAAAAAAEAAAAeABIAAAAAAAIAAAAgABEAAAABAAEAAAAhABEAAAABAAEAAAAfABEAAAABAAEAAAAaABIAAAACAAIAAAAZABIAAAAFAAEAAAAYABIAAAABAAEAAAAXABIAAAABAAEAAAAWABIAAAABAAEAAAAVABIAAAABAAEAAAAUABIAAAABAAEAAAATABIAAAAAAAEAAAAUABEAAAABAAEAAAATABEAAAAAAAEAAAD+/wwAAAAAAAIAAAD+/wsAAAAAAAEAAAD+/woAAAAAAAEAAAD+/wkAAAAAAAEAAAD+/wgAAAAAAAAAAAD//wgAAAAGAAIAAAD//wcAAAAAAAEAAAD//wYAAAAAAAAAAAAAAAgAAAABAAEAAAAAAAkAAAABAAEAAAAAAAoAAAAFAAEAAAAAAAcAAAABAAEAAAABAAcAAAACAAEAAAABAAYAAAAHAAIAAAABAAUAAAADAAAAAAABAAgAAAACAAEAAAABAAkAAAACAAEAAAABAAoAAAACAAIAAAD//wsAAAAFAAEAAAD//woAAAABAAEAAAD//wkAAAABAAEAAAAAAAYAAAABAAAAAAATAAsAAAAAAAMAAAAUAAsAAAAGAAAAAAAVAAsAAAABAAAAAAAWAAsAAAAGAAIAAAAXAAsAAAABAAEAAAAYAAsAAAABAAEAAAAZAAsAAAACAAEAAAAZAAwAAAACAAIAAAAYAAwAAAABAAIAAAAXAAwAAAABAAIAAAAWAAwAAAABAAIAAAAVAAwAAAABAAIAAAAUAAwAAAAAAAIAAAAdAAkAAAABAAMAAAAeAAkAAAAGAAMAAAAfAAkAAAACAAIAAAAfAAgAAAACAAEAAAAfAAcAAAACAAAAAAAeAAcAAAAAAAAAAAAeAAgAAAAAAAEAAAAcAAkAAAAAAAMAAAAGAAwAAAAAAAMAAAAHAAwAAAABAAMAAAAIAAwAAAABAAMAAAAAABMAAAACAAEAAAAAABQAAAAFAAMAAAABABQAAAABAAMAAAACABQAAAAGAAAAAAADABQAAAACAAAAAAADABUAAAAFAAMAAAAEABUAAAABAAMAAAAFABUAAAABAAMAAAAGABUAAAABAAMAAAAHABUAAAAGAAMAAAAIABQAAAABAAEAAAAJABQAAAAFAAIAAAAHABQAAAAAAAEAAAACABUAAAAAAAIAAAAIABUAAAAGAAEAAAAJABUAAAABAAEAAAAKABUAAAABAAEAAAAKABQAAAABAAAAAAALABQAAAABAAAAAAAMABQAAAABAAAAAAALABUAAAABAAEAAAAMABUAAAABAAEAAAANABUAAAAFAAEAAAAOABQAAAABAAAAAAAPABQAAAABAAAAAAAQABQAAAABAAAAAAANABQAAAABAAAAAAAOABUAAAABAAIAAAAPABUAAAABAAIAAAAQABUAAAABAAIAAAARABUAAAACAAIAAAARABQAAAAFAAAAAAASABQAAAAGAAMAAAATABQAAAABAAIAAAAUABQAAAABAAIAAAASABMAAAAAAAAAAAATABMAAAAGAAIAAAAUABMAAAABAAEAAAAVABMAAAABAAEAAAAVABQAAAABAAIAAAAWABQAAAABAAIAAAAXABQAAAABAAIAAAAYABQAAAABAAIAAAAZABQAAAACAAIAAAAWABMAAAABAAEAAAAXABMAAAABAAEAAAAYABMAAAABAAEAAAAZABMAAAACAAEAAAACABAAAAABAAAAAAADABAAAAABAAAAAAAEABAAAAABAAAAAAAFABAAAAABAAAAAAAGABAAAAABAAAAAAAHABAAAAABAAAAAAAIABAAAAABAAAAAAAJABAAAAABAAAAAAAKABAAAAABAAAAAAAIABEAAAABAAEAAAAHABEAAAABAAEAAAAGABEAAAABAAEAAAAFABEAAAAGAAEAAAAEABEAAAABAAIAAAADABEAAAABAAIAAAAIABIAAAABAAEAAAAJABIAAAACAAEAAAAJABEAAAAFAAEAAAAKABEAAAABAAIAAAAIABMAAAABAAEAAAAHABMAAAAGAAEAAAAGABMAAAABAAIAAAAFABMAAAAAAAIAAAAGABIAAAABAAEAAAAHABIAAAABAAEAAAAFABIAAAAAAAEAAAACABEAAAABAAIAAAABABEAAAABAAIAAAAAABEAAAAFAAEAAAD//xEAAAABAAEAAAD//xIAAAABAAEAAAAAABIAAAACAAEAAAALABAAAAABAAAAAAAMABAAAAABAAAAAAANABAAAAABAAAAAAAOABAAAAACAAAAAAAOABEAAAACAAIAAAANABEAAAABAAIAAAAMABEAAAABAAIAAAALABEAAAABAAIAAAAJABMAAAACAAEAAAAWAAoAAAAAAAAAAAAXAAoAAAABAAAAAAAYAAoAAAABAAAAAAAZAAoAAAACAAAAAAD//xAAAAABAAAAAAD+/xAAAAAAAAAAAAD//wwAAAACAAIAAAAAAAsAAAACAAIAAAD+/xEAAAAAAAEAAAD+/xIAAAAAAAEAAAD+/xMAAAAAAAEAAAD//xMAAAABAAEAAAD//xQAAAABAAIAAAD+/xQAAAAAAAIAAAAkAA8AAAABAAAAAAArAA8AAAAAAAMAAAAsAA8AAAABAAMAAAAuAA8AAAABAAAAAAAtAA8AAAAGAAAAAAAvAA8AAAABAAAAAAAwAA8AAAABAAAAAAAxAA8AAAAGAAIAAAAtABAAAAAAAAEAAAAuABAAAAABAAEAAAAvABAAAAABAAEAAAAwABAAAAABAAEAAAAxABAAAAABAAEAAAAyABAAAAAFAAEAAAAzABAAAAABAAIAAAAzAA8AAAABAAEAAAAyAA8AAAABAAEAAAA0AA8AAAACAAEAAAA0ABAAAAACAAIAAAAwABEAAAABAAEAAAAvABEAAAAGAAEAAAAuABEAAAABAAIAAAAtABEAAAAAAAIAAAAxABEAAAABAAEAAAAyABEAAAACAAEAAAAvABIAAAAAAAIAAAAwABIAAAABAAIAAAAxABIAAAAGAAEAAAAyABIAAAACAAEAAAAiABIAAAABAAEAAAAjABIAAAABAAEAAAAjABMAAAABAAEAAAAjABQAAAAGAAEAAAAjABUAAAAAAAEAAAAjABYAAAAAAAIAAAAkABYAAAACAAIAAAAkABUAAAACAAEAAAAkABQAAAACAAEAAAAkABMAAAAFAAEAAAAkABIAAAABAAEAAAAiABMAAAABAAEAAAAhABMAAAAGAAEAAAAhABQAAAAAAAIAAAAiABQAAAABAAIAAAAgABMAAAAAAAIAAAAlABMAAAACAAIAAAAlABIAAAACAAEAAAA3AA0AAAAAAAIAAAA3AAwAAAAAAAAAAAA4AAwAAAABAAAAAAA5AAwAAAABAAAAAAA6AAwAAAABAAAAAAA7AAwAAAACAAAAAAA4AA0AAAABAAIAAAA5AA0AAAAGAAEAAAA6AA0AAAABAAEAAAA7AA0AAAAFAAIAAAA8AA0AAAACAAAAAAAyABMAAAACAAEAAAAyABQAAAACAAEAAAAyABUAAAACAAEAAAAyABYAAAACAAIAAAAxABMAAAAAAAEAAAAxABQAAAAAAAEAAAAxABUAAAAAAAEAAAAIABYAAAAAAAIAAAAJABYAAAABAAIAAAANABYAAAACAAIAAAAMABYAAAABAAIAAAALABYAAAABAAIAAAAKABYAAAABAAIAAAA7AA4AAAABAAEAAAA8AA4AAAAFAAIAAAA9AA4AAAACAAAAAAA6AA4AAAAGAAEAAAA5AA4AAAAAAAIAAAA8AA8AAAAFAAEAAAA9AA8AAAACAAIAAAA7AA8AAAABAAEAAAA6AA8AAAAAAAEAAAA6ABAAAAAAAAEAAAA6ABEAAAAGAAIAAAA5ABEAAAAAAAAAAAA5ABIAAAAGAAMAAAA4ABIAAAAAAAMAAAA6ABIAAAABAAIAAAA7ABIAAAAGAAEAAAA8ABIAAAAFAAIAAAA7ABAAAAABAAEAAAA7ABEAAAABAAEAAAA8ABEAAAACAAEAAAA8ABAAAAACAAEAAAA9ABIAAAACAAAAAAA9ABMAAAAFAAIAAAA+ABMAAAACAAAAAAA+ABQAAAACAAEAAAA9ABQAAAABAAEAAAA7ABMAAAAAAAEAAAA7ABQAAAAAAAIAAAA8ABQAAAAGAAEAAAA8ABUAAAAAAAEAAAA9ABUAAAABAAEAAAA8ABMAAAABAAEAAAA9ABYAAAABAAIAAAA+ABYAAAACAAIAAAA+ABUAAAACAAEAAAA8ABYAAAAGAAMAAAA7ABYAAAAAAAMAAABEAA8AAAABAAAAAABFAA8AAAABAAAAAABJAA8AAAABAAAAAABIAA8AAAABAAAAAABHAA8AAAABAAAAAABGAA8AAAABAAAAAABFABAAAAABAAEAAABGABAAAAABAAEAAABHABAAAAABAAEAAABIABAAAAABAAEAAABKAA8AAAABAAAAAABLAA8AAAABAAAAAABMAA8AAAABAAAAAABMABAAAAABAAEAAABJABAAAAABAAEAAABKABAAAAABAAEAAABLABAAAAABAAEAAABGABEAAAABAAEAAABHABEAAAABAAEAAABIABEAAAABAAEAAABJABEAAAABAAEAAABHABIAAAABAAEAAABGABIAAAABAAEAAABIABIAAAABAAEAAABJABIAAAABAAEAAABKABIAAAABAAEAAABKABMAAAABAAEAAABJABMAAAABAAEAAABIABMAAAABAAEAAABHABMAAAABAAEAAABFABIAAAABAAEAAABGABMAAAABAAEAAABFABMAAAABAAEAAABJABQAAAABAAEAAABIABQAAAABAAEAAABHABQAAAABAAEAAABGABQAAAABAAEAAABIABUAAAABAAEAAABJABUAAAABAAEAAABKABUAAAABAAEAAABJABYAAAABAAIAAABIABYAAAABAAIAAABHABYAAAABAAIAAABKABYAAAABAAIAAABLABYAAAABAAIAAABLABUAAAABAAEAAABKABQAAAABAAEAAABLABIAAAABAAEAAABLABEAAAABAAEAAABLABMAAAABAAEAAABMABIAAAABAAEAAABKABEAAAABAAEAAABMABEAAAABAAEAAABNABAAAAABAAEAAABOABEAAAABAAEAAABPABEAAAABAAEAAABPABIAAAABAAEAAABOABIAAAABAAEAAABNABIAAAABAAEAAABMABMAAAABAAEAAABNABEAAAABAAEAAABOABAAAAABAAEAAABPABAAAAABAAEAAABNABMAAAABAAEAAABLABQAAAABAAEAAABMABQAAAABAAEAAABNABQAAAABAAEAAABOABQAAAABAAEAAABOABMAAAABAAEAAABMABUAAAABAAEAAABNABUAAAABAAEAAABOABUAAAABAAEAAABPABQAAAABAAEAAAAxABYAAAAAAAIAAAAxAA4AAAAAAAAAAAAyAA4AAAABAAAAAAAzAA4AAAABAAAAAAA0AA4AAAACAAAAAAAJAAwAAAABAAMAAAAKAAwAAAAHAAMAAAAKAAsAAAAEAAAAAAALAAsAAAACAAMAAAAjAAQAAAAAAAMAAAAkAAQAAAABAAMAAAAlAAQAAAABAAMAAAAmAAQAAAACAAMAAABQABAAAAABAAEAAABRABAAAAACAAEAAABQABEAAAABAAEAAABQABIAAAABAAEAAABPABMAAAABAAEAAABRABIAAAACAAEAAABRABEAAAACAAEAAABRABMAAAACAAEAAABQABMAAAABAAEAAABQABQAAAABAAEAAABRABQAAAACAAEAAABRABUAAAACAAIAAABQABUAAAAFAAEAAABPABUAAAABAAEAAABNABYAAAABAAIAAABOABYAAAABAAIAAABPABYAAAABAAIAAABQABYAAAACAAIAAABHAAcAAAAAAAIAAABIAAcAAAABAAIAAABJAAcAAAABAAIAAABKAAcAAAAGAAEAAABKAAgAAAAAAAIAAABLAAgAAAABAAIAAABMAAgAAAAGAAEAAABMAAkAAAAAAAIAAABNAAkAAAAGAAEAAABNAAoAAAAAAAIAAABOAAoAAAAGAAEAAABOAAsAAAAAAAIAAABPAAsAAAABAAIAAABQAAsAAAABAAIAAABRAAsAAAACAAIAAABRAAoAAAACAAEAAABRAAkAAAACAAEAAABRAAgAAAACAAEAAABRAAcAAAACAAEAAABRAAYAAAACAAEAAABRAAUAAAACAAEAAABRAAQAAAACAAEAAABRAAMAAAACAAEAAABRAAIAAAACAAEAAABRAAEAAAACAAEAAABQAAEAAAABAAEAAABQAAAAAAABAAAAAABRAAAAAAACAAAAAABPAAAAAAABAAAAAABOAAAAAAABAAAAAABNAAAAAAABAAAAAABMAAAAAAABAAAAAABLAAAAAAABAAAAAABKAAAAAAABAAAAAABJAAAAAAABAAAAAABIAAAAAAABAAAAAABHAAAAAAABAAAAAABGAAAAAAABAAAAAABFAAAAAAABAAAAAABEAAAAAAABAAAAAABDAAAAAAAAAAAAAABDAAEAAAAAAAEAAABDAAIAAAAAAAIAAABEAAIAAAAGAAEAAABEAAMAAAAAAAEAAABEAAQAAAAAAAIAAABFAAQAAAABAAIAAABGAAQAAAAGAAEAAABGAAUAAAAAAAEAAABGAAYAAAAAAAIAAABHAAYAAAAGAAEAAABHAAUAAAABAAEAAABHAAQAAAABAAEAAABGAAMAAAABAAEAAABFAAMAAAABAAEAAABFAAIAAAABAAEAAABFAAEAAAABAAEAAABEAAEAAAABAAEAAABGAAEAAAABAAEAAABHAAEAAAABAAEAAABIAAEAAAABAAEAAABIAAIAAAABAAEAAABHAAIAAAABAAEAAABHAAMAAAABAAEAAABGAAIAAAABAAEAAABJAAIAAAABAAEAAABKAAIAAAAFAAEAAABKAAMAAAACAAEAAABKAAQAAAAFAAIAAABJAAMAAAABAAEAAABIAAMAAAABAAEAAABIAAQAAAABAAEAAABJAAQAAAABAAEAAABJAAUAAAABAAEAAABJAAYAAAABAAEAAABIAAYAAAABAAEAAABIAAUAAAABAAEAAABLAAQAAAACAAAAAABLAAUAAAACAAEAAABLAAYAAAACAAEAAABKAAYAAAABAAEAAABKAAUAAAABAAEAAABLAAcAAAAFAAIAAABMAAcAAAABAAAAAABNAAcAAAAGAAIAAABOAAcAAAABAAEAAABOAAgAAAABAAEAAABNAAgAAAABAAEAAABOAAkAAAABAAEAAABPAAkAAAABAAEAAABQAAkAAAABAAEAAABPAAoAAAABAAEAAABQAAoAAAABAAEAAABQAAgAAAABAAEAAABQAAcAAAABAAEAAABQAAYAAAABAAEAAABPAAYAAAABAAEAAABPAAUAAAABAAEAAABPAAQAAAABAAEAAABPAAMAAAABAAEAAABPAAIAAAABAAEAAABPAAEAAAABAAEAAABQAAMAAAABAAEAAABQAAQAAAABAAEAAABQAAUAAAABAAEAAABQAAIAAAABAAEAAABOAAIAAAABAAEAAABOAAEAAAABAAEAAABNAAEAAAABAAEAAABMAAEAAAABAAEAAABLAAEAAAABAAEAAABKAAEAAAABAAEAAABLAAIAAAABAAIAAABJAAEAAAABAAEAAABMAAIAAAABAAIAAABNAAIAAAAGAAEAAABNAAMAAAAAAAIAAABOAAMAAAAGAAEAAABOAAQAAAAAAAEAAABPAAgAAAABAAEAAABPAAcAAAABAAEAAABNAAYAAAAAAAEAAABNAAUAAAAAAAAAAABOAAUAAAAGAAIAAABOAAYAAAABAAEAAABDAA8AAAABAAAAAABCAA8AAAAGAAAAAABBAA8AAAAAAAMAAABNAA8AAAABAAAAAABOAA8AAAABAAAAAABPAA8AAAABAAAAAABQAA8AAAABAAAAAABRAA8AAAACAAAAAABEABAAAAABAAEAAABDABAAAAABAAEAAABCABAAAAAAAAEAAABCABEAAAAAAAEAAABCABIAAAAAAAEAAABCABMAAAAAAAEAAABDABMAAAABAAEAAABDABIAAAABAAEAAABEABIAAAABAAEAAABEABEAAAABAAEAAABDABEAAAABAAEAAABEABMAAAABAAEAAABFABEAAAABAAEAAABDABQAAAABAAEAAABCABQAAAAAAAEAAABCABUAAAAAAAIAAABDABUAAAAGAAEAAABEABUAAAABAAEAAABFABUAAAABAAEAAABFABQAAAABAAEAAABEABQAAAABAAEAAABGABUAAAABAAEAAABHABUAAAABAAEAAABFABYAAAABAAIAAABEABYAAAABAAIAAABDABYAAAAAAAIAAABGABYAAAABAAIAAABMABYAAAABAAIAAAA=")
tile_set = ExtResource("10_qhmis")

[node name="BugsLayer" type="Node2D" parent="."]

[node name="LightningDarkness" parent="BugsLayer" instance=ExtResource("11_rblpi")]
position = Vector2(107, 256)

[node name="LightningDarkness2" parent="BugsLayer" instance=ExtResource("11_rblpi")]
position = Vector2(193, 319)

[node name="LightningDarkness3" parent="BugsLayer" instance=ExtResource("11_rblpi")]
position = Vector2(925, 192)

[node name="Mygg" parent="BugsLayer" instance=ExtResource("12_fpxxd")]
position = Vector2(768.087, 93.5332)
curve = SubResource("Curve2D_a2lnf")

[node name="Mygg2" parent="BugsLayer" instance=ExtResource("12_fpxxd")]
position = Vector2(772.848, 142.455)
curve = SubResource("Curve2D_uqq1c")

[node name="Mygg3" parent="BugsLayer" instance=ExtResource("12_fpxxd")]
position = Vector2(578.068, 129.72)
curve = SubResource("Curve2D_miurb")

[node name="VampireBat" parent="BugsLayer" instance=ExtResource("18_ekrsf")]
position = Vector2(456, 72)

[node name="VampireBat2" parent="BugsLayer" instance=ExtResource("18_ekrsf")]
position = Vector2(920, 112)

[node name="VampireBat3" parent="BugsLayer" instance=ExtResource("18_ekrsf")]
position = Vector2(1008, 128)

[node name="ItemsLayer" type="Node2D" parent="."]

[node name="Coffee" parent="ItemsLayer" instance=ExtResource("12_mt5i8")]
position = Vector2(319, 163)

[node name="PlayerLayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="FadeToLair" type="TextureRect" parent="."]
offset_left = 1112.0
offset_top = -28.0
offset_right = 1368.0
offset_bottom = 393.0
texture = SubResource("GradientTexture1D_e3acf")

[node name="EffectsLayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PlayerSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(120, 176)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="OffScreenHitBoxComponent" parent="." instance=ExtResource("14_ue5an")]
position = Vector2(0, 400)
collision_layer = 32
collision_mask = 16
damage = 10

[node name="CollisionShape2D" parent="OffScreenHitBoxComponent" index="0"]
shape = SubResource("WorldBoundaryShape2D_8m4mn")

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="CoffeeBar" parent="UICanvasLayer" instance=ExtResource("15_woxkw")]
unique_name_in_owner = true
visible = false
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_36ewo")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(1312, 240)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(60, 12)
shape = SubResource("RectangleShape2D_1lsc0")

[node name="Foreground" type="Node2D" parent="."]

[node name="LavaForegroundParallax2D" type="Parallax2D" parent="Foreground"]
scroll_scale = Vector2(1.2, 1)
repeat_size = Vector2(96, 0)
repeat_times = 5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Foreground/LavaForegroundParallax2D"]
position = Vector2(64, 341)
sprite_frames = SubResource("SpriteFrames_pkq1b")
autoplay = "default"
frame_progress = 0.162904

[node name="GPUParticles2D" type="GPUParticles2D" parent="Foreground/LavaForegroundParallax2D"]
material = SubResource("CanvasItemMaterial_vchwx")
position = Vector2(48, 353)
amount = 3
process_material = SubResource("ParticleProcessMaterial_kqdpn")
texture = ExtResource("18_n4gy1")
lifetime = 0.5

[node name="LairPortalArea2D" type="Area2D" parent="Foreground"]
position = Vector2(1320, 216)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/LairPortalArea2D"]
shape = SubResource("RectangleShape2D_uxweb")

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="body_entered" from="Foreground/LairPortalArea2D" to="." method="_on_lair_portal_area_2d_body_entered"]

[editable path="OffScreenHitBoxComponent"]
